--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -1,5 +1,6 @@
 .button-container {
     min-width: 165px;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     width: auto;
     height: 50px;
     letter-spacing: 0.5px;
